# NovumEngine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
editor/: CMakeLists.txt
editor/src/: main.cpp
engine/: CMakeLists.txt
engine/include/core/: Window.h
engine/include/platform/opengl/: Context.h
engine/include/utility/: Assertion.hpp  FlatQueue.hpp
engine/opt/glad/: CMakeLists.txt
engine/opt/glad/include/glad/: gl.h
engine/src/core/: Window.cpp
engine/src/platform/opengl/: Context.cpp
opt/: CMakeLists.txt
opt/glad/include/glad/: gl.h  glad.h
opt/glad/src/: glad.c
tests/: CMakeLists.txt
tests/engine/: CMakeLists.txt
tests/engine/src/: FlatQueueTests.cpp  main.cpp
